portfolio-dev/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: portfolio-frontend
  name: portfolio-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-frontend
  template:
    metadata:
      labels:
        app: portfolio-frontend
    spec:
      nodeSelector:
        kubernetes.io/hostname: eee101.tokyotech.org
      containers:
        - image: ghcr.io/traptitech/traportfolio-ui:main@sha256:ac784030c1770a8d2c91d2abfb2549019de61064d67ce2d610bb81b8b750d2a4
          name: portfolio-frontend
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: "10m"
              memory: "16Mi"
            limits:
              cpu: "100m"
              memory: "64Mi"
      restartPolicy: Always
