portfolio-dev/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: portfolio-dev-frontend
  name: portfolio-frontend
spec:
  ports:
    - name: "3016"
      port: 3016
      targetPort: 80
  selector:
    app: portfolio-dev-frontend
